--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -349,6 +349,10 @@ body.dark-mode .collapsing .details_catagory_wrap .single_catagory .social_links
     color: #fff;
 }
 
+body.dark-mode .collapse .details_catagory_wrap .single_catagory .social_links a:hover {
+    color: #80a8cc;
+}
+
 body.dark-mode .btn.show {
     color: #fff;
 }
@@ -503,10 +507,11 @@ body.dark-mode .wbnrfz_details_blog {
     background: #0d0d0de0;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-    margin-top: -4.2em;
+    margin-top: -5.2em;
     padding-top: 3em;
     padding-bottom: 2em;
-    z-index: 1000000 !important;
+    z-index: 1000000 !important; 
+    /* mask-image: linear-gradient(to bottom, black calc(100% - 32px), transparent 100%); */
 }
 
 body.dark-mode .wbnrfz_eicw {
