--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -503,6 +503,13 @@ body.dark-mode .wbnrfz_details_body {
     padding-bottom: 2em;
 }
 
+body.dark-mode .wbnrfz_details_body_tchp {
+    background: #18191a;
+    margin-top: -3.2em;
+    padding-top: 0em;
+    padding-bottom: 2em;
+}
+
 body.dark-mode .wbnrfz_details_blog {
     background: #0c0c0ce0;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
