--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -67,8 +67,8 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: wrap;
-        max-width: 24em;
         text-align: center;
+
     }
 }
 
@@ -208,6 +208,15 @@
     .single_catagory .btn {
         width: 100%;
         max-width: 200px;
+    }
+
+    .main-title {
+        margin: 0 auto; /* Center the element horizontally */
+        padding: 0 -0.5rem; /* Add padding to prevent text from touching edges */
+        max-width: 100%; /* Ensure it doesn't exceed the container width */
+        box-sizing: border-box; /* Include padding in width calculations */
+        overflow-wrap: break-word; /* Break long words to prevent overflow */
+        word-wrap: break-word; /* Ensure proper word wrapping */
     }
 }
 
@@ -455,6 +464,13 @@
     .light:after {
         width: 120px;
     }
+
+    h1.brc {
+        text-align: center;
+        line-height: 1.2;
+        margin: 0 auto;
+        max-width: 100%;
+    }
 }
 
 /* ---- */
@@ -478,16 +494,13 @@
         text-overflow: ellipsis;
     }
 
-    .breadcrumb-item {
+    .breadcrumb-item,
+    body.dark-mode .breadcrumb-item {
         overflow: hidden;
         text-overflow: ellipsis;
+        color: #7b7b7b;
         white-space: nowrap;
-        max-width: 150px;
-    }
-
-    .breadcrumb-item a {
-        text-decoration: none;
-        color: inherit;
+        max-width: 100%;
     }
 }
 
