--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@
     margin: 0;
 }
 
-html, body {
+html,
+body {
     overflow-x: hidden;
     width: 100%;
 }
@@ -85,9 +86,6 @@ a:hover {
     font-weight: 500;
 }
 
-a:hover {
-    color: #6d99c0;
-}
 
 li {
     list-style: none;
@@ -407,7 +405,7 @@ input:required {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #f8faf4;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -836,8 +834,7 @@ header {
 
 /* ------------------------------------------ 10.0 Footer ------------------------------------------ */
 .footer-area {
-    background-color: #f8f9fa;
-    /* Light gray background */
+    background-color: #fdfdfd;
     padding: 10px 0;
     padding-top: 1em;
 }
@@ -851,22 +848,29 @@ header {
 
 .footer-area .social-info a {
     margin: 0 10px;
-    font-size: 18px;
-    color: #6c757d;
-    /* Muted icon color */
+    font-size: 14px;
+    color: #f8f9fa;
+    background-color: #6c757d;
+    border-radius: 50%;
     transition: color 0.3s ease;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+    padding-bottom: 7px;
+    text-align: center;
+    transition: all 0.3s ease;
+
 }
 
 .footer-area .social-info a:hover {
-    color: #007bff;
-    /* Change to primary color on hover */
+    background-color: #6d99c0;
+    color: #fff;
 }
 
 .footer-area .copywrite-text p {
     margin: 0;
     font-size: 14px;
     color: #6c757d;
-    /* Muted text color */
     margin-top: 10px;
 }
 
