--- a/css/style.css
+++ b/css/style.css
@@ -644,6 +644,7 @@ header {
     border-bottom: 2px solid #7b7c64;
     text-decoration: none;
     line-height: 40px;
+    color: #7b7c64;
 }
 
 .nav-item:hover:after {
