--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -170,7 +170,7 @@ body.dark-mode .nav-item.active {
     border-bottom: 2px solid #7b7c64;
     text-decoration: none;
     line-height: 40px;
-    color: #7b7c64;
+    color: #a2a390;
 }
 
 body.dark-mode .nav-item-toggle {
